work around Test::More stupidity
git-svn-id: svn://svn.jrock.us/cpan_modules/Test-YAML-Valid@232 01d9642f-1d18-0410-bea3-844bd6f27a17

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Test-YAML-Valid
 
+0.03	31 January 2007
+	Work around braindead Test::More change (no code changes, only
+	tests)
+
 0.02    30 January 2007
         Add support for YAML::Syck
 	Add &yaml_files_ok()        
